# rbj

./: .gitignore  CMakeLists.txt  FilterTypes.odt  claude_version.py  gen_golden.py  headset_talkback.py  live_eq_old.py  live_eq_pulse.py  plot_eq.py  query_devices  rbj_eq.hpp  rbj_eq.py  rbj_golden.txt  setupNULLSink  test_rbj.cpp
issues/: 00-project-overview.md  01-rbj-eq-core-library.md  02-live-audio-applications.md  03-testing-and-validation.md  04-utilities-and-scripts.md  05-claude-version.md  agent
